gitops/stage03-model-monitoring/trustyai/istio/destinationrule-mistral-models.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mistral-models-route
  labels:
    app.kubernetes.io/part-of: evaluation
spec:
  host: mistral-24b-predictor-private-ai-demo.apps.cluster-gmgrr.gmgrr.sandbox5294.opentlc.com
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
      sni: mistral-24b-predictor-private-ai-demo.apps.cluster-gmgrr.gmgrr.sandbox5294.opentlc.com
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mistral-models-route-quantized
  labels:
    app.kubernetes.io/part-of: evaluation
spec:
  host: mistral-24b-quantized-predictor-private-ai-demo.apps.cluster-gmgrr.gmgrr.sandbox5294.opentlc.com
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
      sni: mistral-24b-quantized-predictor-private-ai-demo.apps.cluster-gmgrr.gmgrr.sandbox5294.opentlc.com
